@@ -109,6 +109,7 @@ to this:
 * Use Webrat's #contain matcher in generated "I should (not) see" step definitions (Bryan Helmkamp)
 
 == Bugfixes
+* Escaped quotes - \" - inside multiline strings will be unescaped.
 * Flush output in HTML formatter since JRuby doesnt do it automatically (Diego Carrion)
 * Better handling of ARGV (#169 David Chelimsky, Ben Mabey)
 * Compatibility with ruby-debug (do ARGV.dup in bin/cucumber so it can restart ruby with same args) (Aslak Hellesøy)
